--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,13 @@
+html {
+  font-size: 16px; /* px means 'pixels': the base font size is now 10 pixels high  */
+  font-family: Monospace; /* this should be the rest of the output you got from Google fonts */
+  background-color: #000000;
+}
 
+body {
+  width: 1000px;
+  margin: 0 auto;
+  background-color: #FFFFFF;
+  padding: 0 20px 20px 20px;
+  border: 2px solid silver;
+}
