--- a/styles/style.css
+++ b/styles/style.css
@@ -1,20 +1,6 @@
-html {
-  font-size: 16px; /* px means 'pixels': the base font size is now 10 pixels high  */
-  font-family: Monospace; /* this should be the rest of the output you got from Google fonts */
-  background-color: #000000;
-}
-
-body {
-  width: 1000px;
-  margin: 0 auto;
-  background-color: #FFFFFF;
-  padding: 0 20px 20px 20px;
-  border: 2px solid silver;
-}
-
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #333;
+    background-color: #000000;
     overflow: hidden;
 }
 
@@ -22,7 +8,7 @@ body {
 .topnav a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: silver;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -38,4 +24,55 @@ body {
 /* Hide the link that should open and close the topnav on small screens */
 .topnav .icon {
     display: none;
+}
+
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
+html {
+  font-size: 16px; /* px means 'pixels': the base font size is now 10 pixels high  */
+  font-family: Monospace; /* this should be the rest of the output you got from Google fonts */
+  background-color: #000000;
+}
+
+main, footer {
+  width: 1000px;
+  margin: 0 auto;
+  background-color: #FFFFFF;
+  padding: 0 20px 20px 20px;
+  border: 2px solid silver;
+}
+
+nav {
+  width: 1000px;
+  margin: 0 auto;
+  padding: 0 20px 20px 20px;
+}
+
+header {
+  width: 1000px;
+  margin: 0 auto;
+  padding: 0 20px 20px 20px;
+  color: white;
 }
