--- a/styles/style.css
+++ b/styles/style.css
@@ -76,3 +76,38 @@ header {
   padding: 0 20px 20px 20px;
   color: white;
 }
+
+/* Social media buttons */
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 20px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+    opacity: 0.7;
+}
+
+/* Set a specific color for each brand */
+
+/* Twitter */
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
+
+/* LinkedIn */
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+
+/* Github */
+.fa-github {
+  background: #333;
+  color: white;
+}
