--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,28 @@
 html {
   font-size: 16px; /* px means 'pixels': the base font size is now 10 pixels high  */
   font-family: Monospace; /* this should be the rest of the output you got from Google fonts */
-  background-color: #000000;
+  /*background-color: #000000; */
+
+  /* Location of the image */
+  background-image: url(../images/background.jpg);
+
+  /* Background image is centered vertically and horizontally at all times */
+  background-position: center center;
+
+  /* Background image doesn't tile */
+  background-repeat: no-repeat;
+
+  /* Background image is fixed in the viewport so that it doesn't move when
+     the content's height is greater than the image's height */
+  background-attachment: fixed;
+
+  /* This is what makes the background image rescale based
+     on the container's size */
+  background-size: cover;
+
+  /* Set a background color that will be displayed
+     while the background image is loading */
+  background-color: #464646;
 }
 
 main, footer {
