--- a/styles/style.css
+++ b/styles/style.css
@@ -1,53 +1,38 @@
-/* Add a black background color to the top navigation */
-.topnav {
-    background-color: #000000;
-    overflow: hidden;
+/* Style the navbar */
+#navbar {
+  overflow: hidden;
+  background-color: #333;
+  width: 1000px;
+  margin: 0 auto;
+  padding: 10px 10px 10px 10px;
+  border: 2px solid silver;
 }
 
-/* Style the links inside the navigation bar */
-.topnav a {
-    float: left;
-    display: block;
-    color: silver;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
+/* Navbar links */
+#navbar a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
 }
 
-/* Change the color of links on hover */
-.topnav a:hover {
-    background-color: #ddd;
-    color: black;
+/* Page content */
+.content {
+  padding: 16px;
 }
 
-/* Hide the link that should open and close the topnav on small screens */
-.topnav .icon {
-    display: none;
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
-/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
+/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+  padding-top: 60px;
 }
 
 html {
@@ -81,21 +66,15 @@ main, footer {
   width: 1000px;
   margin: 0 auto;
   background-color: #FFFFFF;
-  padding: 0 20px 20px 20px;
+  padding: 10px 10px 10px 10px;
   border: 2px solid silver;
 }
 
-nav {
+h1 {
   width: 1000px;
   margin: 0 auto;
-  padding: 0 20px 20px 20px;
-}
-
-header {
-  width: 1000px;
-  margin: 0 auto;
-  padding: 0 20px 20px 20px;
-  color: white;
+  background-color: silver;
+  padding: 2px 2px 2px 2px;
 }
 
 /* Social media buttons */
